routing has been fixed and wouter as been added

--- a/src/catalog-page/catalogpage.css
+++ b/src/catalog-page/catalogpage.css
@@ -73,7 +73,9 @@
     height: 3rem;
     background: linear-gradient(90deg, #f9b77d 0%, #fcd480 50%, #82ba89 100%);
   }
-  /**/
+  /*Candy cards*/
+  .candycard {
+  }
   /**/
   /**/
   /**/
