--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  text-align: center;
   justify-content: space-between;
   background: linear-gradient(90deg, #71c1e2 0%, #fba4b5 100%);
 }
@@ -47,7 +48,7 @@
   align-items: center;
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 2560px) {
   .footer h3 {
     color: #ffffff;
     text-align: center;
