product detail pages pull images from correct json file & "added to cart" conformation message implemented with a small bit of css to make her a little cuter

--- a/src/product-detail-page/product-detail.css
+++ b/src/product-detail-page/product-detail.css
@@ -125,3 +125,10 @@
     height: auto;
   }
 }
+
+.product-added-message {
+  margin-top: 0.5rem;
+  color: #2f9e44;
+  font-weight: 600;
+  font-size: 0.9rem;
+}
