my final commit

--- a/src/checkout-page/checkout.css
+++ b/src/checkout-page/checkout.css
@@ -62,7 +62,7 @@
     align-items: center;
     margin-bottom: 2rem;
   }
-
+  /* order box section*/
   .orderbox {
     width: 32.375rem;
     height: 20rem;
